--- a/css/media.css
+++ b/css/media.css
@@ -36,7 +36,6 @@
     padding: 10px;
     position: sticky;
     top: 0;
-    z-index: 2;
   }
 
   .menu-toggle {
